outputs/csi300-test/reevo/2025-07-28_13-42-49/problem_iter9_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 12
    df['wma_close'] = df.apply(lambda row: sum(w * p for w, p in zip(weights[:row['adaptive_window']], row.name - pd.Timedelta(days=row['adaptive_window']):row.name)) / sum(weights[:row['adaptive_window']]) if row['adaptive_window'] > 0 else row['close'], axis=1)
                                                                                                                                                           ^
SyntaxError: invalid syntax
